# cinemamode

./: .gitignore  CMakeLists.txt  README.md
packaging/: .SRCINFO  PKGBUILD  io.github.human9mil.cinemamode.desktop  io.github.human9mil.cinemamode.metainfo.xml  io.github.human9mil.cinemamode.yml  org.cinemamode.app.desktop  org.cinemamode.app.metainfo.xml
qml/: Main.qml
src/: main.cpp  monitorcontroller.cpp  monitorcontroller.h
website/: README.md  index.html  package-lock.json  package.json
website/public/: _headers
website/src/: index.css
